--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 ﻿
 <!DOCTYPE HTML>
 <html>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?620a96370449c353a6e25c1afce1b745";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 <head>
 	<meta http-equiv=Content-Type content="text/html; charset=iso-8859-1">
 	<meta name=author content="Tong Zhu">
