--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3NS5XGJ06R"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-3NS5XGJ06R');
+	</script>
 	<meta http-equiv=Content-Type content="text/html; charset=iso-8859-1">
 	<meta name=author content="Tong Zhu">
 	<title>Welcome to Tong Zhu's Home Page</title>
