--- a/index.html
+++ b/index.html
@@ -39,20 +39,22 @@
 		800 Dongchuan Rd., Shanghai 200240, China<br>
 		<br>
 		<b>Lab</b>: <a href="http://nsec.sjtu.edu.cn/">Network Security and Privacy Protection (NSEC) Lab</a><br>
-    	<b>Email</b>: tongzhu AT sjtu.edu.cn<br>
+    	<b>Email 1</b>: tongzhu AT sjtu.edu.cn<br>
+		<b>Email 2</b>: tong.zh AT foxmail.com<br>
         <b><a href="Curriculum_Vitae____Tong_Zhu.pdf" target="_blank">[CV_in_English]</a></b>
-		
+		<b><a href="Curriculum_Vitae____Tong_Zhu_CN.pdf" target="_blank">[CV_in_Chinese]</a></b>
     </tr>
     </table>
     <hr>
      <p><h3>Short Bios</h3>
     	<ul>
-    	I am pursuing my Ph.D. degree at the Department of Computer Science & Engineering of Shanghai Jiao TongUniversity. Previously, I received a Bachelor of Science degree in the field of computer science and technology from University of Electronic Science and Technology of China in June 2019. My current research interests is mobile security and privacy. I published several international conference and journal papers, including: ACM CCS ('21, '24), USENIX Security, IEEE ICDCS, DFRWS, and Digital Investigation. I have identified and reported multiple security vulnerabilities in various systems. I also serve as the reviewer for academic journals including Peer-to-Peer Networking and Applications (PPNA).</ul>
+    	I am pursuing my Ph.D. degree at the Department of Computer Science & Engineering of Shanghai Jiao Tong University. Previously, I received a Bachelor of Science degree in the field of computer science and technology from the University of Electronic Science and Technology of China in June 2019. My current research interests are mobile security and privacy, especially mobile advertising fraud detection. I published several international conference and journal papers, including ACM CCS ('21, '24)(CCF-A), USENIX Security'23 (CCF-A), ACM/IEEE TON'24 (CCF-A), IEEE ICDCS (CCF-B), DFRWS (CCF-C), and Digital Investigation (SCI). I received the ACM CCS'24 Student Travel Grant Award (2024), Outstanding Graduate Student of the University of Electronic Science and Technology of China (2019), and Grand Prize Scholarship (Top 3%) (2018). I have identified and reported multiple security vulnerabilities in various systems. I also serve as the reviewer for academic journals including Peer-to-Peer Networking and Applications (PPNA) and have been hired as a consultant expert
+for the Service Center for Ecological Security in Brand Marketing at the China Advertising Association.</ul>
     </p>
     <hr>
 	<p><h3>Research Interest</h3>
     	<ul>
-    	I am interested in a set of projects that can improve the security of mobile systems and have a real-world impact. My research mainly focuses on:
+    	My research interests focus on identifying and addressing new security threats in mobile systems. I am especially interested in the detection of mobile advertising fraud. I am interested in a set of novel techniques and projects that can improve the security and privacy of mobile systems and have a real-world impact. My research mainly focuses on:
 		<li>Static / dynamic analysis on mobile systems such as Android.<br>
 		<li>Mobile advertising fraud detection.<br>
 		<li>Digital forensics.<br>
@@ -76,6 +78,8 @@
 	
     <p><h3>Honors and Awards</h3>
     	<ul>
+			<li>Hired as a consultant expert for the Service Center for Ecological Security in Brand Marketing at the China Advertising Association, Sep. 2024<br>
+			<li>Student Travel Grant, ACM CCS 2024, Sep. 2024<br>
     		<li>Outstanding Graduate Student of University of Electronic Science and Technology of China, Jun. 2019<br>
 			<li>Grand Prize Scholarship (Top 3%), Dec. 2018<br>
 			<li>A-level Certificate of Comprehensive Quality for College Students in Sichuan Province, Oct. 2018<br>
@@ -92,8 +96,9 @@
 	<p><h3>Publications</h3>
 	<p><h4>Journal Papers</h4>
     	<ul>
-
-		<li> Xiaodong Lin, Ting Chen,<b>Tong Zhu</b>, Kun Yang, Fengguo Wei. Automated forensic analysis of mobile applications on Android devices[J].<b>Digital Investigation</b>, 2018. 26: p. S59-S66.(The special issue of the DFRWS’18) </li>
+		<li> <b>Tong Zhu</b>, Zhen Huang, Lu Zhou, Guoxing Chen, Yan Meng, and Haojin Zhu. Collaborative Ad Fraud Detection in Ad Networks[J]. IEEE/ACM Transactions on Networking, 2024 (<b>IEEE/ACM TON</b>, CCF-A, Major Revision)
+		
+		<li> Xiaodong Lin, Ting Chen,<b>Tong Zhu</b>, Kun Yang, Fengguo Wei. Automated forensic analysis of mobile applications on Android devices[J].<b>Digital Investigation</b>, 2018. 26: p. S59-S66.(The special issue of the DFRWS'18) </li>
 
 		</ul>
 	</p>
@@ -104,11 +109,11 @@
 		
 		<li> Lu Zhou, Chengyongxiao Wei, <b>Tong Zhu</b>, Guoxing Chen, Xiaokuan Zhang, Suguo Du, Hui Cao, Haojin Zhu. POLICYCOMP: Counterpart Comparison of Privacy Policies Uncovers Overbroad Personal Data Collection Practices[C]. The 32nd USENIX Security Symposium(<b>USENIX Security'23</b>, CCF-A). USENIX, 2023. </li>
 
-		<li> <b>Tong Zhu</b>, Yan Meng, Haotian Hu, Xiaokuan Zhang, Minhui Xue, Haojin Zhu. Dissecting Click Fraud Autonomy in the Wild[C]. ACM 28th Conference on Computer and Communications Security(<b>ACM CCS’21</b>, CCF-A). ACM, 2021. </li>
+		<li> <b>Tong Zhu</b>, Yan Meng, Haotian Hu, Xiaokuan Zhang, Minhui Xue, Haojin Zhu. Dissecting Click Fraud Autonomy in the Wild[C]. ACM 28th Conference on Computer and Communications Security(<b>ACM CCS'21</b>, CCF-A). ACM, 2021. </li>
 
-		<li> Ting Chen, Zihao Li, Yufei Zhang, Xiapu Luo, Ang Chen, Kun Yang, Bin Hu, <b>Tong Zhu</b>, Shifang Deng, Teng Hu, Jiachi Chen, Xiaosong Zhang. Dataether: Data exploration framework for ethereum[C]. IEEE 39th International Conference on Distributed Computing Systems (<b>ICDCS’19</b>, CCF-B). IEEE, 2019, pp.1369-1380. </li>
+		<li> Ting Chen, Zihao Li, Yufei Zhang, Xiapu Luo, Ang Chen, Kun Yang, Bin Hu, <b>Tong Zhu</b>, Shifang Deng, Teng Hu, Jiachi Chen, Xiaosong Zhang. Dataether: Data exploration framework for ethereum[C]. IEEE 39th International Conference on Distributed Computing Systems (<b>ICDCS'19</b>, CCF-B). IEEE, 2019, pp.1369-1380. </li>
 				
-		<li> Xiaodong Lin, Ting Chen, <b>Tong Zhu</b>, Kun Yang, Fengguo Wei. Automated forensic analysis of mobile applications on Android devices[C]. Digital Forensics Research Workshop (<b>DFRWS’18</b>, CCF-C). Elsevier, 2018.</li>
+		<li> Xiaodong Lin, Ting Chen, <b>Tong Zhu</b>, Kun Yang, Fengguo Wei. Automated forensic analysis of mobile applications on Android devices[C]. Digital Forensics Research Workshop (<b>DFRWS'18</b>, CCF-C). Elsevier, 2018.</li>
 		
 		</ul>
 	</p>		
@@ -120,8 +125,10 @@
 	<p><h3>Patent</h3>
     	<ul>
 
-		<li> Haojin Zhu, <b>Tong Zhu</b>, Yan Meng. 2022. Mobile advertising click fraud detection method, system, and terminal based on static analysis. CN (<b>National Invention Patent</b>) CN113191809B, filed May 7, 2021, and issued August 9, 2022 </li>
-
+		<li> Haojin Zhu, <b>Tong Zhu</b>, Yan Meng. 2022. Mobile advertising click fraud detection method, system, and terminal based on static analysis. CN (<b>National Invention Patent</b>) CN113191809B, filed May 7, 2021, and issued August 9, 2022. <b>(Authorized)</b> </li>
+		
+		<li> Haojin Zhu, <b>Tong Zhu</b>, Yan Meng, Guoxing Chen. 2024. Collusion-based advertising attribution laundering fraud detection method, system, and terminal based on static analysis. CN (<b>National Invention Patent</b>) 2024. <b>(Pending)</b> </li>
+		
 		</ul>
 	</p>
 	<hr>
@@ -156,7 +163,7 @@
 	
 	<hr style="width: 100%; height: 2px;">
 	<div style="text-align: center; font-size: 18px;">
-		<small> Last updated on 06/04/2024: &nbsp;&nbsp;&nbsp;
+		<small> Last updated on 09/22/2024: &nbsp;&nbsp;&nbsp;
 			</small>
 			<br>
 	</div>>
