--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <hr>
      <p><h3>Short Bios</h3>
     	<ul>
-    	I am pursuing my Ph.D. degree at the Department of Computer Science & Engineering of Shanghai Jiao Tong University. Previously, I received a Bachelor of Science degree in the field of computer science and technology from the University of Electronic Science and Technology of China in June 2019. My current research interests are mobile security and privacy, especially mobile advertising fraud detection. I published several international conference and journal papers, including ACM CCS ('21, '24)(CCF-A), USENIX Security'23 (CCF-A), ACM/IEEE TON'24 (CCF-A), IEEE ICDCS (CCF-B), DFRWS (CCF-C), and Digital Investigation (SCI). I received the ACM CCS'24 Student Travel Grant Award (2024), Outstanding Graduate Student of the University of Electronic Science and Technology of China (2019), and Grand Prize Scholarship (Top 3%) (2018). I have identified and reported multiple security vulnerabilities in various systems. I also serve as the reviewer for academic journals including Peer-to-Peer Networking and Applications (PPNA) and have been hired as a consultant expert
-for the Service Center for Ecological Security in Brand Marketing at the China Advertising Association.</ul>
+    	I received my Ph.D. degree in the field of computer science and technology at the  Department of Computer Science & Engineering of Shanghai Jiao Tong University in 2024. Previously, I received a Bachelor of Science degree in the field of computer science and technology from the University of Electronic Science and Technology of China in June 2019. My current research interests are mobile security and privacy, especially mobile advertising fraud detection. I published several international conference and journal papers, including ACM CCS ('21, '24)(CCF-A), USENIX Security'23 (CCF-A), ACM/IEEE TON'24 (CCF-A), IEEE ICDCS (CCF-B), DFRWS (CCF-C), and Digital Investigation (SCI). I received ACM CCS'24 Student Travel Grant Award (2024), the only gold prize of the 2024 China Advertising Great-Wall Award (Academic Category), Outstanding Graduate Student of the University of Electronic Science and Technology of China (2019), and Grand Prize Scholarship (Top 3%) (2018). I have identified and reported multiple security vulnerabilities in various systems. I also serve as the reviewer for academic journals including Peer-to-Peer Networking and Applications (PPNA) and have been hired as a consultant expert for the Service Center for Ecological Security in Brand Marketing at the China Advertising Association.
+		</ul>
     </p>
     <hr>
 	<p><h3>Research Interest</h3>
@@ -63,7 +63,7 @@ for the Service Center for Ecological Security in Brand Marketing at the China A
     <hr>
     <p><h3>Education</h3>
     	<ul>
-        	<li>Ph.D., computer science and Engineering, 2019 - Current<br>
+        	<li>Ph.D., computer science and Engineering, 2019.09 - 2024.12<br>
         		<i>Shanghai Jiao Tong University</i>, Shanghai, China<br>
 			    Advisor: Professor <a href="https://nsec.sjtu.edu.cn/~hjzhu/">Haojin Zhu</a><br>
 				Area of Study: Mobile Security and Privacy
@@ -78,6 +78,7 @@ for the Service Center for Ecological Security in Brand Marketing at the China A
 	
     <p><h3>Honors and Awards</h3>
     	<ul>
+			<li>The only gold prize of the 2024 China Advertising Great-Wall Award (Academic Category), Dec. 2024<br>
 			<li>Hired as a consultant expert for the Service Center for Ecological Security in Brand Marketing at the China Advertising Association, Sep. 2024<br>
 			<li>Student Travel Grant, ACM CCS 2024, Sep. 2024<br>
     		<li>Outstanding Graduate Student of University of Electronic Science and Technology of China, Jun. 2019<br>
@@ -163,7 +164,7 @@ for the Service Center for Ecological Security in Brand Marketing at the China A
 	
 	<hr style="width: 100%; height: 2px;">
 	<div style="text-align: center; font-size: 18px;">
-		<small> Last updated on 09/22/2024: &nbsp;&nbsp;&nbsp;
+		<small> Last updated on 12/10/2024: &nbsp;&nbsp;&nbsp;
 			</small>
 			<br>
 	</div>>
