--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<br>
 		<b>Lab</b>: <a href="http://nsec.sjtu.edu.cn/">Network Security and Privacy Protection (NSEC) Lab</a><br>
     	<b>Email 1</b>: tongzhu AT sjtu.edu.cn<br>
-		<b>Email 2</b>: tong.zh AT foxmail.com<br>
+		<b>Email 2 (Commonly Used Email)</b>: tong.zh AT foxmail.com<br>
         <b><a href="Curriculum_Vitae____Tong_Zhu.pdf" target="_blank">[CV_in_English]</a></b>
 		<b><a href="Curriculum_Vitae____Tong_Zhu_CN.pdf" target="_blank">[CV_in_Chinese]</a></b>
     </tr>
@@ -48,7 +48,7 @@
     <hr>
      <p><h3>Short Bios</h3>
     	<ul>
-    	I received my Ph.D. degree in the field of computer science and technology at the  Department of Computer Science & Engineering of Shanghai Jiao Tong University in 2024. Previously, I received a Bachelor of Science degree in the field of computer science and technology from the University of Electronic Science and Technology of China in June 2019. My current research interests are mobile security and privacy, especially mobile advertising fraud detection. I published several international conference and journal papers, including ACM CCS ('21, '24)(CCF-A), USENIX Security'23 (CCF-A), ACM/IEEE TON'24 (CCF-A), IEEE ICDCS (CCF-B), DFRWS (CCF-C), and Digital Investigation (SCI). I received ACM CCS'24 Student Travel Grant Award (2024), the only gold prize of the 2024 China Advertising Great-Wall Award (Academic Category), Outstanding Graduate Student of the University of Electronic Science and Technology of China (2019), and Grand Prize Scholarship (Top 3%) (2018). I have identified and reported multiple security vulnerabilities in various systems. I also serve as the reviewer for academic journals including Peer-to-Peer Networking and Applications (PPNA) and have been hired as a consultant expert for the Service Center for Ecological Security in Brand Marketing at the China Advertising Association.
+    	I received my Ph.D. degree in the field of computer science and technology at the  Department of Computer Science & Engineering of Shanghai Jiao Tong University in 2024. Previously, I received a Bachelor of Science degree in the field of computer science and technology from the University of Electronic Science and Technology of China in June 2019. My current research interests are mobile security and privacy, especially mobile advertising fraud detection. I published several international conference and journal papers, including ACM CCS ('21, '24)(CCF-A), USENIX Security'23 (CCF-A), ACM/IEEE TON'25 (CCF-A), IEEE ICDCS (CCF-B), DFRWS (CCF-C), and Digital Investigation (SCI). I received ACM CCS'24 Student Travel Grant Award (2024), the only gold prize of the 2024 China Advertising Great-Wall Award (Academic Category), Outstanding Graduate Student of the University of Electronic Science and Technology of China (2019), and Grand Prize Scholarship (Top 3%) (2018). I have identified and reported multiple security vulnerabilities in various systems. I also serve as the reviewer for academic journals including Peer-to-Peer Networking and Applications (PPNA) and have been hired as a consultant expert for the Service Center for Ecological Security in Brand Marketing at the China Advertising Association.
 		</ul>
     </p>
     <hr>
@@ -97,7 +97,7 @@
 	<p><h3>Publications</h3>
 	<p><h4>Journal Papers</h4>
     	<ul>
-		<li> <b>Tong Zhu</b>, Zhen Huang, Lu Zhou, Guoxing Chen, Yan Meng, and Haojin Zhu. Collaborative Ad Fraud Detection in Ad Networks[J]. IEEE/ACM Transactions on Networking, 2024 (<b>IEEE/ACM TON</b>, CCF-A, Major Revision)
+		<li> <b>Tong Zhu</b>, Zhen Huang, Lu Zhou, Guoxing Chen, Yan Meng, and Haojin Zhu. Collaborative Ad Fraud Detection in Ad Networks[J]. IEEE/ACM Transactions on Networking, 2025 (<b>IEEE/ACM TON</b>, CCF-A)
 		
 		<li> Xiaodong Lin, Ting Chen,<b>Tong Zhu</b>, Kun Yang, Fengguo Wei. Automated forensic analysis of mobile applications on Android devices[J].<b>Digital Investigation</b>, 2018. 26: p. S59-S66.(The special issue of the DFRWS'18) </li>
 
@@ -164,7 +164,7 @@
 	
 	<hr style="width: 100%; height: 2px;">
 	<div style="text-align: center; font-size: 18px;">
-		<small> Last updated on 12/10/2024: &nbsp;&nbsp;&nbsp;
+		<small> Last updated on 3/2/2025: &nbsp;&nbsp;&nbsp;
 			</small>
 			<br>
 	</div>>
